kubernetes/dicomproxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: dicomproxy
  name: dicomproxy
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: dicomproxy
    spec:
      containers:
      - image: srcc/epad:data
        name: dicomproxy
        resources: {}
      restartPolicy: Always
status: {}
