kubernetes/epad-dcm4chee-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: epad-dcm4cee
  name: epad-dcm4cee
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: epad-dcm4chee
    spec:
      containers:
      - image: srcc/epad:epad
        name: epad-web
        ports:
        - containerPort: 8080
        resources: {}
        lifecycle:
          postStart:
            exec:
              command:
                - "/bin/bash"
                - "/epad-install.sh"
        volumeMounts:
        - mountPath: /root/DicomProxy
          name: dicomproxy
      - image: srcc/epad:dcm4chee
        name: dcm4chee
        ports:
        - containerPort: 9080
        - containerPort: 11112
        resources: {}
        volumeMounts:
        - mountPath: /root/DicomProxy
          name: dicomproxy
      restartPolicy: Always
      volumes:
      - name: dicomproxy
        emptyDir: {}
status: {}
