kubernetes/epad-dcm4chee-mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: epad-dcm4cee-mysql
  name: epad-dcm4chee-mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: epad-dcm4chee-mysql
    spec:
      containers:
      - image: srcc/epad:main
        imagePullPolicy: Always
        name: epad-web
        command: ["tail"]
        args: ["-f", "/dev/null"]
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /root/DicomProxy
          name: dicomproxy
      - image: srcc/epad:dcm4chee
        imagePullPolicy: Always
        name: dcm4chee
        ports:
        - containerPort: 9080
        - containerPort: 11112
        resources: {}
        volumeMounts:
        - mountPath: /root/DicomProxy
          name: dicomproxy
      - image: rubinlab/mysql
        imagePullPolicy: Always
        name: mysql
        resources: {}
        ports:
        - containerPort: 3306
          name: mysql
      restartPolicy: Always
      volumes:
      - name: dicomproxy
        emptyDir: {}
status: {}
