kubernetes/epad-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: epad
  name: epad
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: epad
    spec:
      containers:
      - image: srcc/epad:epad
        name: epad-web
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
