kubernetes/epad-dcm4chee-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: epad-dcm4chee-mysql
  name: epad-dcm4chee-mysql
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "9080"
    port: 9080
    targetPort: 9080
  - name: "11112"
    port: 11112
    targetPort: 11112
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: epad-dcm4chee-mysql
status:
  loadBalancer: {}
