kubernetes/epad-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: epad-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /epad
spec:
  rules:
  - http:
      paths:
      - path: /epad
        backend:
          serviceName: epad-dcm4chee-mysql-swqth
          servicePort: 8080
